feat: add media hosting metadata for audio and meditation APIs

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,11 @@ AUTH_COOKIE_SECURE=false
 # Active prompt pack version (optional)
 MINDCOACH_PROMPT_PACK=2026.02.1
 
+# Media asset hosting base URL:
+# - local embedded static files: /audio
+# - CDN/object storage: https://cdn.example.com/mimind-assets
+MEDIA_ASSET_BASE_URL=/audio
+
 # ---------- Model gateway ----------
 # local | openai
 MINDCOACH_PROVIDER_SAFETY_NLU=local
