--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dev = [
   "ruff>=0.6.0,<1.0.0",
   "mypy>=1.11.0,<2.0.0",
 ]
+i18n = [
+  "deep-translator>=1.11.4,<2.0.0",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["backend/tests"]
