feat(storage): encrypt sensitive assessment and coach data at rest

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ AUTH_ACCESS_TTL_MINUTES=15
 AUTH_REFRESH_TTL_HOURS=168
 AUTH_COOKIE_SECURE=false
 
+# Sensitive data encryption key for SQLite at-rest protection (AES-256):
+# - base64 encoded 32-byte key, e.g. base64:xxxxxxxx
+# - or 64-char hex key
+MIMIND_DATA_ENCRYPTION_KEY=base64:change-me-32-byte-key
+
 # Active prompt pack version (optional)
 MINDCOACH_PROMPT_PACK=2026.02.1
 
