--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
   "fastapi>=0.115.0,<1.0.0",
   "uvicorn>=0.30.0,<1.0.0",
   "httpx>=0.27.0,<1.0.0",
+  "cryptography>=44.0.0,<46.0.0",
 ]
 
 [project.optional-dependencies]
