--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ ADMIN_SESSION_TTL_HOURS=8
 AUTH_JWT_SECRET=change-me-jwt-secret
 AUTH_ACCESS_TTL_MINUTES=15
 AUTH_REFRESH_TTL_HOURS=168
+AUTH_EMAIL_VERIFICATION_TTL_HOURS=24
 AUTH_COOKIE_SECURE=false
 
 # Sensitive data encryption key for SQLite at-rest protection (AES-256):
