--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,17 @@ AUTH_REFRESH_TTL_HOURS=168
 AUTH_EMAIL_VERIFICATION_TTL_HOURS=24
 AUTH_COOKIE_SECURE=false
 
+# Billing provider: local | stripe
+BILLING_PROVIDER=local
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_PRICE_ID_BASE=
+STRIPE_PRICE_ID_COACH=
+STRIPE_CHECKOUT_SUCCESS_URL=https://example.com/billing/success
+STRIPE_CHECKOUT_CANCEL_URL=https://example.com/billing/cancel
+STRIPE_WEBHOOK_TOLERANCE_SECONDS=300
+STRIPE_TIMEOUT_SECONDS=10
+
 # Sensitive data encryption key for SQLite at-rest protection (AES-256):
 # - base64 encoded 32-byte key, e.g. base64:xxxxxxxx
 # - or 64-char hex key
