--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ AUTH_REFRESH_TTL_HOURS=168
 AUTH_EMAIL_VERIFICATION_TTL_HOURS=24
 AUTH_COOKIE_SECURE=false
 
-# Billing provider: local | stripe
+# Billing provider: local | stripe | domestic
 BILLING_PROVIDER=local
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
@@ -27,6 +27,10 @@ STRIPE_CHECKOUT_SUCCESS_URL=https://example.com/billing/success
 STRIPE_CHECKOUT_CANCEL_URL=https://example.com/billing/cancel
 STRIPE_WEBHOOK_TOLERANCE_SECONDS=300
 STRIPE_TIMEOUT_SECONDS=10
+ALIPAY_GATEWAY_URL=https://openapi.alipay.com/gateway.do
+ALIPAY_NOTIFY_SECRET=
+WECHAT_PAY_GATEWAY_URL=https://api.mch.weixin.qq.com/v3/pay/transactions/native
+WECHAT_PAY_NOTIFY_SECRET=
 
 # Sensitive data encryption key for SQLite at-rest protection (AES-256):
 # - base64 encoded 32-byte key, e.g. base64:xxxxxxxx
