--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -11,7 +11,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:e2e": "playwright test",
-    "test:e2e:headed": "playwright test --headed"
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:admin": "PLAYWRIGHT_ADMIN_E2E=1 playwright test -c playwright.admin.config.ts"
   },
   "dependencies": {
     "framer-motion": "^12.34.3",
