--- a/.github/workflows/governance.yml
+++ b/.github/workflows/governance.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Sync dependencies
         run: uv sync --extra dev
 
+      - name: Check unresolved merge markers
+        run: python3 scripts/check_conflict_markers.py
+
       - name: Validate scripts are executable
         run: |
           chmod +x scripts/dev-setup.sh
